# win-kernel-hooks

./: CMakeLists.txt  CMakePresets.json  readme.md
.github/workflows/: cmake-multi-platform.yml
cmake/pkg/: freetype-config.cmake  glad-config.cmake  glfw-config.cmake  imgui-config.cmake  sdl3-config.cmake
ctest/: CMakeLists.txt  imgui_example.cxx
src/: CMakeLists.txt  address_extractor.cxx  dll_main.cxx  hooks.cxx  hooks.hxx  interceptor.cxx  memory_defender.cxx  memory_defender.hxx  memory_operations.cxx  memory_operations.hxx
